fixed ignore maybe?

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
 nturgb+d_skeletons/
-nturgb+d_skeletons_convert/
-nturgb+d_skeletons_2/
-nturgb+d_skeltons_2_convert/
+skeletons_convert/
+nturgb+d_skeletons_small/
+skeletons_convert_small/
